fixing overlapping css from accueil to profilprive

--- a/frontend/src/css/Accueil.css
+++ b/frontend/src/css/Accueil.css
@@ -171,7 +171,7 @@ div ul{
     .commentaires {
         width: 40%;
     }
-    .commentaires h1, h2,  p{
+    .commentaires h1 h2  p{
         font-size: medium;
     }
 }
