--- a/frontend/src/css/piedPage.css
+++ b/frontend/src/css/piedPage.css
@@ -11,7 +11,7 @@
 	/* padding: 5px; */
     /* margin: 0px 100px 0px 100px; */
     /* background-color: #7c6d52; */
-    background-color: rgb(112, 72, 11);
+    background-color: rgba(255, 199, 114, 0.555);
     font-size: calc(0.1em + 0.8vw);
     min-width: 300px;
     position: absolute;
